HelloUltraviolet/Fixtures/RejectedSource/Expressions/InvalidCast/Expected.uv
//! Expected diagnostic metadata for the InvalidCast rejected-source specimen.

expectedDiagnostic("E-SEM-2528", "rule.16.T-Cast-Invalid")
